@@ -4,8 +4,10 @@
 #pragma GCC system_header
 #endif
 
+#ifndef COM_NO_WINDOWS_H
 #include <windows.h>
 #include <ole2.h>
+#endif
 
 #ifndef _RC_INVOKED
 
