@@ -4,7 +4,11 @@
 #pragma GCC system_header
 #endif
 
+#ifndef COM_NO_WINDOWS_H
 #include <windows.h>
+#include <ole2.h>
+#endif
+
 #ifdef __cplusplus
 extern "C"{
 #endif
